apps/couchdb/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
spec:
  type: ClusterIP
  ports:
    - port: 5984
      targetPort: 5984
      protocol: TCP
  selector:
    app: couchdb
