apps/couchdb/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: couchdb-ingress
spec:
  endpointSelector:
    matchLabels:
      app: couchdb
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: couchdb
      toPorts:
        - ports:
            - port: "5984"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: moltis
      toPorts:
        - ports:
            - port: "5984"
              protocol: TCP
    - fromEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "5984"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: couchdb-egress
spec:
  endpointSelector:
    matchLabels:
      app: couchdb
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
